k8s/config-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-deploy
  namespace: msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-app
  template:
    metadata:
      labels:
        app: config-app
    spec:
      containers:
        - name: config-container
          image: wnsgud0310/msa-config:0.1.0
