k8s/eureka-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: msa
  name: eureka-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eureka-app
  template:
    metadata:
      labels:
        app: eureka-app
    spec:
      containers:
        - name: eureka-container
          image: wnsgud0310/msa-eureka:0.1.0
