k8s/factorial-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorial-app-deploy
  namespace: msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorial-app
  template:
    metadata:
      labels:
        app: factorial-app
    spec:
      containers:
        - name: factorial-app
          image: wnsgud0310/factorial-app:0.1.3
