k8s/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: msa
  name: gateway-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-container
          image: wnsgud0310/msa-gateway:0.1.0
