k8s/item-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-deploy
  namespace: msa
  labels:
    app: item-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: item-app
  template:
    metadata:
      labels:
        app: item-app
    spec:
      containers:
        - name: item-container
          image: wnsgud0310/msa-item:0.1.0
