k8s/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: msa
spec:
  selector:
    app: config-app
  ports:
    - protocol: TCP
      port: 8080
