k8s/eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: msa
spec:
  selector:
    app: eureka-app
  ports:
    - protocol: TCP
      port: 8761
