k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  namespace: msa
spec:
  selector:
    app: gateway-app
  ports:
    - protocol: TCP
      port: 8070
