k8s/item-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-service
  namespace: msa
spec:
  selector:
    app: item-app
  ports:
    - protocol: TCP
      port: 8084
